--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@ env:
 # EDIT DEFAULT_COMMAND AND DEFAULT_RETRY_COMMAND IF YOU WANT ~
 # BUT DON'T REMOVE --SESSION IN DEFAULT_COMMAND AND DEFAULT_RETRY_COMMAND !!!
 
-  DEFAULT_COMMAND: python ms_rewards_farmer.py --session --virtual-display --dont-check-for-updates --dont-check-internet --superfast --skip-unusual --error --no-images --on-finish exit --telegram 5699057111:AAExY_s56alollnAEgwy910lJ7E9qhXhwW8 891294506
-  DEFAULT_RETRY_COMMAND: python ms_rewards_farmer.py --session --virtual-display --dont-check-for-updates --dont-check-internet --superfast --skip-unusual --error --no-images --on-finish exit --telegram 5699057111:AAExY_s56alollnAEgwy910lJ7E9qhXhwW8 891294506
+  DEFAULT_COMMAND: python ms_rewards_farmer.py --session --virtual-display --dont-check-for-updates --dont-check-internet --currency INR --superfast --skip-unusual --error --no-images --on-finish exit --telegram 5699057111:AAExY_s56alollnAEgwy910lJ7E9qhXhwW8 891294506
+  DEFAULT_RETRY_COMMAND: python ms_rewards_farmer.py --session --virtual-display --dont-check-for-updates --dont-check-internet --currency INR --superfast --skip-unusual --error --no-images --on-finish exit --telegram 5699057111:AAExY_s56alollnAEgwy910lJ7E9qhXhwW8 891294506
   HAS_SESSION: 1
 
 # DON'T TOUCH THIS
